--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,6 +26,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
+        sudo apt install libopenmpi-dev
         sudo apt-get install libglu1-mesa
         python3 setup.py sdist
         pip install -e .
