--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,4 +1,4 @@
-# This workflow will installs FOL & its dependencies and then run tests 
+# This workflow will install FOL & its dependencies and then it runs the tests 
 
 name: Python package
 
@@ -29,12 +29,6 @@ jobs:
         sudo apt-get install libglu1-mesa
         python3 setup.py sdist
         pip install -e .
-#    - name: Lint with flake8
-#      run: |
-#        # stop the build if there are Python syntax errors or undefined names
-#        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-#        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-#        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
         pytest tests
